<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TweetItem">

    <ImageView
        android:id="@+id/tweet_user_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/tweet_user_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tweet_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_hint"
            android:textAppearance="@style/Text.Primary.Bold" />

        <TextView
            android:id="@+id/tweet_user_nick_name"
            style="@style/TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/nickname_hint" />

        <TextView
            android:id="@+id/tweet_creation_date"
            style="@style/TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/tweet_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/content_hint"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tweet_user_image"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/tweet_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tweet_user_image"
        app:layout_constraintTop_toBottomOf="@+id/tweet_text"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tweet_user_image"
        app:layout_constraintTop_toBottomOf="@+id/tweet_image">

        <TextView
            android:id="@+id/tweet_retweet"
            style="@style/TextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_retweet" />

        <TextView
            android:id="@+id/tweet_retweet_count"
            style="@style/TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:text="5" />

        <TextView
            android:id="@+id/tweet_like"
            style="@style/TextIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_heart_o" />

        <TextView
            android:id="@+id/tweet_like_count"
            style="@style/TextView.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingStart="5dp"
            android:text="16" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>